<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/login_and_signu_up_root_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="@dimen/login_root_layout_padding"
    android:paddingTop="@dimen/login_root_layout_padding">

    <android.support.constraint.ConstraintLayout
        android:layout_width="@dimen/login_layout_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_login_and_signup"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".signUp.view.SignUpActivity">

        <ProgressBar
            android:id="@+id/sign_up_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/sign_up_et_email"
            style="@style/registeration_edit_text"
            android:layout_width="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:hint="@string/sign_up_et_hint_email"
            android:maxLength="@integer/et_email_max_length"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_et_password"
            app:layout_constraintEnd_toEndOf="@+id/sign_up_et_password"
            app:layout_constraintStart_toStartOf="@+id/sign_up_et_password"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_et_username" />

        <EditText
            android:id="@+id/sign_up_et_username"
            style="@style/registeration_edit_text"
            android:layout_width="0dp"
            android:hint="@string/sign_up_et_hint_username"

            android:maxLength="@integer/et_name_max_length"
            android:inputType="textCapWords"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_et_email"
            app:layout_constraintEnd_toEndOf="@+id/sign_up_et_email"
            app:layout_constraintStart_toStartOf="@+id/sign_up_et_email"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65999997"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/sign_up_et_password"
            style="@style/registeration_edit_text"
            android:layout_width="0dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:maxLength="@integer/et_password_max_length"
            android:hint="@string/sign_up_et_hint_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_et_email" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="0dp"

            style="@style/registeration_light_button"
            android:text="@string/sign_up_btn_sign_up_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/sign_up_et_password"
            app:layout_constraintStart_toStartOf="@+id/sign_up_et_password"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_et_password" />

        <Button
            android:id="@+id/btn_have_account"
            style="@style/registeration_dark_button"
            android:layout_width="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/sign_up_btn_have_acc_text"
            app:layout_constraintEnd_toEndOf="@+id/btn_sign_up"
            app:layout_constraintStart_toStartOf="@+id/btn_sign_up"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />

        <ImageView
            android:id="@+id/sign_up_iv_delete"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/contentDescription_delete_photo"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"

            app:layout_constraintBottom_toBottomOf="@+id/sign_up_iv_photo"
            app:layout_constraintEnd_toStartOf="@+id/sign_up_iv_photo"
            app:layout_constraintTop_toTopOf="@+id/sign_up_iv_photo"
            app:srcCompat="@drawable/ic_cancel_black_24dp" />

        <ImageView
            android:id="@+id/sign_up_iv_add"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="?attr/selectableItemBackgroundBorderless"

            android:contentDescription="@string/contentDescription_add"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/sign_up_iv_photo"
            app:layout_constraintStart_toEndOf="@+id/sign_up_iv_photo"
            app:layout_constraintTop_toTopOf="@+id/sign_up_iv_photo"
            app:layout_constraintVertical_bias="0.519"
            app:srcCompat="@drawable/ic_edit_black_24dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/sign_up_iv_photo"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/contentDescription_profile"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/user_white"
            app:civ_border_color="@color/white"
            app:civ_border_width="1dp"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_et_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            style="@style/registeration_text_view_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_iv_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>