<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/message_et_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:background="@drawable/et_send_message"
            android:ems="10"

            android:hint="@string/chat_et_hint"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="2000"
            android:maxLines="5"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:scrollHorizontally="false" />

        <ImageButton
            android:id="@+id/message_ib_send"
            android:layout_width="wrap_content"
            android:contentDescription="@string/contentDescription_send"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            app:srcCompat="@drawable/ic_send_black_24dp" />
    </FrameLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_messages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/messages_tv_no_messages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_tv_first_message"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/frame"
        app:layout_constraintEnd_toEndOf="@+id/rv_messages"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rv_messages" />
</android.support.constraint.ConstraintLayout>