<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_search_iv_image"
        android:layout_width="56dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        app:civ_border_width="1dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/contentDescription_search_item_photo"
        android:layout_marginTop="8dp"
        android:src="@drawable/user_brown"
        app:civ_border_color="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_search_tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:layout_weight="0.6"
        tools:text="Reuichcud Afeifhees"
        android:textColor="@color/textPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/user_search_iv_image"
        app:layout_constraintTop_toTopOf="@+id/user_search_iv_image" />

    <TextView
        android:id="@+id/user_search_tv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        tools:text="hheugyye@hotmail.com"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/user_search_tv_name"
        app:layout_constraintTop_toBottomOf="@+id/user_search_tv_name" />

    <ImageButton
        android:id="@+id/user_search_ib_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/contentDescription_search_item_btn"
        android:layout_marginTop="8dp"
        android:layout_weight="0.2"
        android:background="?selectableItemBackgroundBorderless"
        android:text="@string/user_search_item_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_person_add_black_24dp" />
</android.support.constraint.ConstraintLayout>